chore: fix layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@ body {
   margin: 0;
   padding: 0;
   background: linear-gradient(0deg, rgba(55,55,59,1) 0%, rgba(38,96,168,1) 35%, rgba(239,252,255,1) 100%);
-  backdrop-filter: grayscale(0.6)
+  backdrop-filter: grayscale(0.5);
 }
